# echo_prime

./: .env.example  .github_config.json  .gitignore  AGI_SYSTEM_USAGE.md  AUTONOMOUS_EVOLUTION_README.md  BENCHMARK_RESULTS.md  CODEBASE_AUDIT_2026_01_05.md  DEPLOYMENT_GUIDE.md  ECHO_PRIME_ECOSYSTEM_PACK.md  FINAL_SUPREMACY_REPORT.md  GPU_DEPLOYMENT_GUIDE.md  HUGGINGFACE_README.md  HUGGINGFACE_RELEASE_GUIDE.md  INSTALL.md  INVENTION_DATA_GUIDE.md  INVENTION_DATA_QUICKSTART.md  N3PH1L1M_README.md  PRESS_RELEASE_CSA_SUPREMACY.md  PRODUCTION_STATUS.md  QUICKSTART.md  README.md  README_spaces.md  SUPREMACY_DASHBOARD.md  TED_TALK_SCRIPT_THE_WATCHMAKER.md  WHITE_PAPER_CSA_SUPREMACY.md  active_learning.py  advanced_meta_learning.py  advanced_safety.py  agi_development_plan.py  ai_benchmark_suite.py  ai_supremacy_demonstration.py  analyze_research_synthesis.py  app.py  apply_persistent_optimizations.py  arXiv_CSA_Supremacy.md  audit_bbb_marketing.py  audit_report.md  auto_restart_dashboard.sh  autonomous_evolution.err  autonomous_evolution.out  (+198 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.snapshots/: config.json
agents/: __init__.py  human_collaboration.py  multi_agent.py
bbb_autonomous/: bbb_core_engine.py  browser_automation.py
capabilities/: __init__.py  creativity.py  mathematical_patterns.py  mathematical_verification.py  prompt_masterworks.py  scientific_discovery.py  self_correction.py  visual_abstraction.py
visualizer/qulab-infinite/: README.md  pyproject.toml
visualizer/qulab-infinite/data/materials/: README.md
visualizer/qulab-infinite/docs/: environment-setup.md
visualizer/qulab-infinite/notebooks/: ghz_calibration.py
visualizer/qulab-infinite/scripts/: download-mp-dataset.py  golden-run-smoke.py  validate-extended-materials.py
visualizer/qulab-infinite/src/qulab_infinite/: __init__.py
visualizer/qulab-infinite/src/qulab_infinite/benchmarks/: __init__.py  ghz.py
visualizer/qulab-infinite/src/qulab_infinite/config/: loader.py
visualizer/qulab-infinite/src/qulab_infinite/database/: __init__.py  base.py  engines.py  models.py  repository.py  schema.py
visualizer/qulab-infinite/src/qulab_infinite/etl/: __init__.py  flows.py  tasks.py
visualizer/qulab-infinite/src/qulab_infinite/units/: __init__.py  registry.py
visualizer/qulab-infinite/src/qulab_infinite/utils/: __init__.py  provenance.py
visualizer/qulab-infinite/src/qulab_infinite/validation/: __init__.py  measurement.py
(+288 files in other folders)
